[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/NPCBase.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 60.075

[node name="NPCBase" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="NPCAnimatedSprite" type="AnimatedSprite" parent="StaticBody2D"]

[node name="NPCCollision" type="CollisionShape2D" parent="StaticBody2D"]

[node name="DialogueZone" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="DialogueCollision" type="CollisionShape2D" parent="DialogueZone"]
shape = SubResource( 1 )

[node name="ActiveDialogueMark" type="Sprite" parent="."]

[connection signal="body_entered" from="DialogueZone" to="." method="_on_DialogueZone_body_entered"]
[connection signal="body_exited" from="DialogueZone" to="." method="_on_DialogueZone_body_exited"]
